<resources>
    <string name="app_name">TicketMaster</string>
    <string name="txtTitle">Ticket Master</string>
    <string name="txtTickets">Number of Tickets</string>
    <string name="prompt">Select Group</string>
    <string name="description">Concert Image</string>
    <string name="btnCost">Find the Cost</string>
    <string name="number_of_tickets">Number of Tickets</string>
    <string-array name="txtGroup">
        <item>Beatles</item>
        <item>Weezer</item>
        <item>Greenday</item>
    </string-array>
</resources>